--- a/Justin's Bookhouse/index.css
+++ b/Justin's Bookhouse/index.css
@@ -1,27 +1,45 @@
+#h3 {
+  background-color: #00cc66;
+}
+
+* {
+  font-family: cursive;
+}
+
+html {
+  margin: 100px;
+  margin: 100px;
+}
+
 body {
-  min-height: 100vh;
   /* margin: 100px; */
   margin: auto;
+  margin-right: 100px;
+  margin-left: 100px;
+  padding: auto;
 }
+
 .backgroundImage {
   margin: auto;
-  height: 1400px;
   background-image: url("https://honeybeemill.com/cdn/shop/products/C6A54FD8-0324-4F31-9DE2-4C4E17E698B3.jpg?v=1618929313");
-  background-size: cover;
-  position: relative;
-}
-#bookContainer {
-  box-sizing: border-box;
-  display: flex;
-  flex-wrap: wrap;
-  text-align: center;
   position: absolute;
+  padding-left: 200px;
+  padding-right: 200px;
+  padding-top: 0px;
+}
+
+#bookContainer {
+  width: 500px;
+  text-align: center;
   margin-bottom: 100px;
-  margin-left: 600px;
-  flex-direction: column;
+  margin-left: 100px;
+  margin-top: 100px;
+  margin-right: 100px;
+  flex-wrap: wrap;
   background-color: lavender;
   padding-top: 20px;
-  justify-content: space-between;
+  padding-right: 20px;
+  justify-content: center;
 }
 
 .book > img {
@@ -29,6 +47,7 @@ body {
   height: 200px;
   margin-top: 20px;
   margin-bottom: 20px;
+  margin-left: 20px;
   flex-wrap: wrap;
   border-style: solid;
 }
@@ -36,6 +55,7 @@ body {
 #h1 {
   color: aqua;
 }
+
 #h2 {
   color: violet;
 }
@@ -43,7 +63,10 @@ body {
 #h3 {
   color: blue;
 }
+
 .book {
-  margin: 20px;
+  margin: 50px;
   border-style: solid;
 }
+
+/*# sourceMappingURL=index.css.map */
