--- a/Personal Website /style.css
+++ b/Personal Website /style.css
@@ -97,3 +97,14 @@ body {
   text-align: center;
   margin-top: 250px;
 }
+#form {
+  background-color: yellow;
+  /* width: 150px; */
+  /* justify-content: center; */
+  margin-left: 500px;
+  margin-top: 100px;
+  margin-right: 400px;
+}
+textarea {
+  padding-top: 10px;
+}
